kustomize/overlays/biochecknet/bio-check-ingress.yaml
# ingress for api
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biochecknet-ingress
  labels:
    app: biochecknet-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-biochecknet"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.org/client-max-body-size: "600m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - biochecknet.biosimulations.org
      secretName: biochecknet-ingress-tls
  rules:
    - host: biochecknet.biosimulations.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3001
