kustomize/overlays/biochecknet/biochecknet-ingress.yaml
# ingress for api
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    # nginx.org/client-max-body-size: "600m"
  name: biochecknet-ingress
  labels:
    app: biochecknet-ingress
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
      - biochecknet.biosimulations.org
      secretName: biochecknet-ingress-tls
  rules:
    - host: biochecknet.biosimulations.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biochecknet-api
                port:
                  number: 3001
          - path: /utc-comparison
            pathType: Prefix
            backend:
              service:
                name: biochecknet-api
                port:
                  number: 3001
          - path: /fetch-results/
            pathType: Prefix
            backend:
              service:
                name: biochecknet-api
                port:
                  number: 3001
